edited bug where when screen height was too small divs would overlap

--- a/css/jjweb.css
+++ b/css/jjweb.css
@@ -86,14 +86,14 @@ ul#menu_list li{
 
 .about_details{
 	display:none;
-	height:100%;
+	min-height:100%;
 	width:100%;
 	background-color:#151c37;
 }
 
 .mainDiv{
 
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     align-items: center;
     display: flex;
@@ -121,8 +121,6 @@ ul#menu_list li{
 .about{
 	display:none;
 	text-align:center;
-	width:100%;
-	height:70%;
 }
 
 .about_section{
@@ -194,8 +192,8 @@ ul#menu_list li{
 
 .home_btn{
 	position:absolute;
-    margin-top: 1%;
-    margin-right: 1%;
+    margin-top: 1.5%;
+    margin-right: 1.5%;
     padding: 5px;
     right:0;
     background-color: white;
@@ -207,6 +205,10 @@ ul#menu_list li{
     font-size: 16px;
     font-family:"Century Gothic";
     border-radius: 6px;
+}
+
+.home_btn:hover{
+    padding: 7px 7px 7px 7px;
 }
 
 .blurb_text{
